@@ -1,23 +1,0 @@
-# Copyright (c) 2024 Yuki Kimoto
-# MIT License
-
-class Net::SSLeay::DH : pointer {
-  
-  allow Net::SSLeay::PEM;
-  
-  # Class Methods
-  native static method new : Net::SSLeay::DH ();
-  
-  private static method new_with_pointer : Net::SSLeay::DH ($pointer : Address, $options : object[] = undef) {
-    
-    my $self = new Net::SSLeay::DH;
-    
-    Fn->set_pointer($self, $pointer);
-    
-    return $self;
-  }
-  
-  # Instance Methods
-  native method DESTROY : void ();
-  
-}
