@@ -25,6 +25,7 @@
     * Remove Net::SSLeay::HMAC_CTX class.
     * Remove Net::SSLeay::EC_KEY class.
     * Remove Net::SSLeay::PEM#read_bio_DHparams method.
+    * Remove Net::SSLeay::DH class.
     
 0.026 2024-12-11
   [Incompatibe Changes]
